--- a/src/entities/gain/ui/gameplay/Gain.module.css
+++ b/src/entities/gain/ui/gameplay/Gain.module.css
@@ -3,7 +3,7 @@
   cursor: pointer;
   -webkit-user-select: none;
   user-select: none;
-  z-index: 101;
+  z-index: 21;
 }
 
 .idleGroup {
@@ -55,7 +55,7 @@
   width: 150%;
   top: -29px;
   left: -25%;
-  z-index: 102;
+  z-index: 22;
   pointer-events: none;
 }
 
